# Holod

./: .gitignore  README.md  makefile  pyproject.toml  train_settings.toml
src/holod/: __init__.py  cli.py
src/holod/core/: ablation.py  compare.py  metrics.py  plots.py
src/holod/core/optics/: reconstruction.py
src/holod/infra/: dataclasses.py  dataset.py  log.py  losses.py  models.py  training.py
src/holod/infra/util/: __init__.py  env.py  image_processing.py  paths.py  prog_helper.py  training_help.py  types.py
src/tests/: check_dataset_config.py  check_overfit.py  check_training.py
